added main section + functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="collection">
+    <!-- <header class="collection">
         <ul class="collection__list">
             <li class="collection__listitem--first">
                 <i class="fa-regular fa-face-smile-beam collection__logo"></i>
@@ -20,7 +20,7 @@
             <li class="collection__listitem--second">Collection of happiness</li>
         </ul>
     </header>
-    <main class="collection__main">
+    <main class="collection__main" id="main">
         <section class="collection__sectionleft">
             <article class="collection__article">
                 <ul class="collection__cards">
@@ -58,7 +58,7 @@
                     quas enim accusamus? Vitae porro numquam, mollitia <br> architecto animi placeat reiciendis?
                     Temporibus impedit quidem <br> ipsum beatae fuga eos id omnis excepturi.</p>
                 <div class="collection__wrapper">
-                    <button>text</button>
+                    <audio class="collection__audio" src="">Audio</audio>
                     <p class="collection__source">source</p>
                 </div>
             </article>
@@ -66,7 +66,7 @@
     </main>
     <footer class="footer">
         <p class="footer__p">Gemaakt door Nabil Salimi SD2D</p>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
